# sovereign-sdk

./: .gitignore  Cargo.toml  README.md
adapters/avail/: Cargo.toml
adapters/avail/src/: service.rs  verifier.rs
adapters/avail/src/spec/: address.rs  block.rs  hash.rs  header.rs  mod.rs  transaction.rs
examples/demo-prover-avail/host/: Cargo.toml  Makefile  rollup_config.toml
examples/demo-prover-avail/host/src/: config.rs  main.rs
examples/demo-prover-avail/methods/guest/: Cargo.toml
examples/demo-prover/host/src/: main.rs
examples/demo-rollup/: rollup_config.toml
examples/demo-rollup-avail/: Cargo.toml  Dockerfile  Makefile  README.md  rollup_config.toml  seed-phrase1.json
examples/demo-rollup-avail/src/: config.rs  main.rs  test_rpc.rs
examples/demo-rollup/src/: main.rs
examples/demo-sequencer-avail/: Cargo.toml
full-node/sov-stf-runner/src/: config.rs
