[package]
name = "sov-demo-rollup-avail"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "sovereign.xyz"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = "0.3.17"
sov-demo-rollup = { path = "../demo-rollup" }
anyhow = { workspace = true }
tokio = { workspace = true }
